--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -32,7 +32,7 @@ body {
     margin-left: 10%;
 }
 
-#dispFractionProbs {
+#fractions-container {
     /* text-align: center; */
     width: 55.5%;
     /* height: 40px; */
@@ -43,7 +43,7 @@ body {
 
 /* NNNNNNNNNNNNNNNNNNNNN */
 
-.tablePlay {
+.table-play {
     /* background: grey; */
     background: #ffa600;
     border: 5px solid black;
@@ -67,7 +67,7 @@ li {
     /* margin-right: 10px; */
 }
 
-#sqTableImg {
+#sq-table-img {
     max-width: 54.9%;
     margin-left: 22.20%;
     margin-top: 20px;
@@ -82,7 +82,7 @@ li {
     font-size: 1.2rem;
 }
 
-#container {
+#player-container {
     margin: 20px auto;
     /* max-width: 600px; */
     max-width: 55%;
@@ -97,7 +97,7 @@ li {
     box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
 }
 
-.levelButtons {
+.level-buttons {
     outline: none;
     background: grey;
     border: none;
@@ -109,7 +109,7 @@ li {
     font-weight: 600;
 }
 
-.levelButtons:hover {
+.level-buttons:hover {
     color: darkslategrey;
     /* #1897b4 */
     background: orange;
@@ -122,14 +122,14 @@ li {
 } 
 
 
-#buttonsRow {
+#buttons-row {
     height: 65px;
     background: #676668;
     /* background: red; */
 
 }
 
-#dispLevel {
+#display-level {
     font-size: 1.8rem;
 }
 
@@ -138,7 +138,7 @@ li {
     font-size: 2rem;
 }
 
-#questionSpan {
+#question-span {
     font-size: 2.2rem;
     color: darkcyan;
 }
@@ -204,7 +204,7 @@ h2 {
 }
 
 
-#dispAccuracy {
+#prog-bar-text {
     text-align: right;
     font-weight: 700;
     font-size: 1.3rem;
@@ -234,7 +234,7 @@ h2 {
     border:none;
 }
 
-#myBar {
+#prog-bar {
     width: 0%;
     height: 45px;
     padding-top: 1px;
