--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -6,6 +6,8 @@
 
 body {
     font-family: 'Bungee Inline', cursive;
+    background: #6b5a3a81;
+
 }
 
 .intro {
@@ -14,7 +16,8 @@ body {
 }
 
 .red {
-    color: #dd1534;
+    /* color: #dd1534; */
+    color: #c93d1b;
 }
 
 .green {
@@ -46,11 +49,12 @@ body {
 .player__toggle, .table__toggle {
     /* background: grey; */
     background: #ffa600;
-    border: 5px solid black;
+    border: 6px solid black;
     /* border-radius: 10px; */
     padding-right: 5px;
     height: 65px;
-    width: 55.5%;
+    /* width: 55.5%; */
+    width: 700px;
     margin-left: 22.25%;
     font-size: 1.4rem;
     font-weight: 700;  
@@ -70,9 +74,11 @@ li {
 }
 
 .sq-table-img {
-    max-width: 54.9%;
-    margin-left: 22.20%;
-    margin-top: 20px;
+    /* max-width: 54.9%; */
+    width: 700px;
+    /* margin-left: 22.20%; */
+    /* margin-top: 20px; */
+    margin: 20px auto;
     border: 7px solid black;
     /* border-radius: 5px; */
     -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
@@ -87,10 +93,10 @@ li {
 .player-container {
     margin: 20px auto;
     /* max-width: 600px; */
-    max-width: 55%;
-    /* min-height: 666px; */
+    /* max-width: 55%; */
+    width: 700px;
     background: #ffa600;
-    border: 7px solid black;
+    border: 6px solid black;
     /* border-radius: 10px; */
 
     /* https://www.cssmatic.com/box-shadow */
@@ -106,7 +112,7 @@ li {
     margin: none;
     height: 60px;
     /* height: 9.40%; */
-    width: 9.54%;
+    width: 9.53%;
     font-size: 1.7rem;
     font-weight: 600;
 }
@@ -125,8 +131,12 @@ li {
 
 
 .buttons-row {
+    /* width: 100%; */
+    width: 700px;
     height: 65px;
     background: #676668;
+    /* display: flex;
+    justify-content: space-around; */
     /* background: red; */
 
 }
@@ -183,7 +193,7 @@ h2 {
 .logo {
     margin: 0px 20px 10% 0%;
     padding-right: 15px;
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 .instruction {
@@ -258,7 +268,8 @@ h2 {
     float:left;
     border: 5px solid black;
     /* border-radius: 10px; */
-    width: 55.3%;
+    /* width: 55.3%; */
+    width: 700px;
     margin-top: 20px;
     margin-left: 22.1%;
     min-height: 60px;
@@ -293,7 +304,8 @@ span:nth-child(odd){
     float:left;
     border: 5px solid black;
     /* border-radius: 10px; */
-    width: 55.3%;
+    /* width: 55.3%; */
+    width: 700px;
     margin-top: 20px;
     margin-left: 22.1%;
     min-height: 60px;
