--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -7,7 +7,14 @@
 body {
     font-family: 'Bungee Inline', cursive;
     background: #6b5a3a81;
+    background: #376293dd;
+    background: wheat;
+}
 
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .intro {
@@ -28,20 +35,21 @@ body {
 /* TRY ALIGNING ONE TO THE LEFT AND THE OTHER TO THE RIGHT */
 
 .introStats {
-    float: left;
-    text-align: center;
+    /* border: 2px solid red; */
+    margin: 0px;
+    /* float: left; */
+    /* text-align: center; */
     /* margin: 5px 10%; */
-    margin-top: 5px;
-    margin-left: 10%;
+    /* margin-top: 5px; */
+    /* margin-left: 10%; */
 }
 
 .fractions-container {
-    /* text-align: center; */
-    width: 55.5%;
-    /* height: 40px; */
-    margin-left: 22.25%;
+    /* border: 2px solid green; */
+    width: 688px;
+    display: flex;
+    justify-content: space-around;
     margin-bottom: 20px;
-    /* border: 1px solid black; */
 }
 
 /* NNNNNNNNNNNNNNNNNNNNN */
@@ -55,7 +63,7 @@ body {
     height: 65px;
     /* width: 55.5%; */
     width: 700px;
-    margin-left: 22.25%;
+    /* margin-left: 22.25%; */
     font-size: 1.4rem;
     font-weight: 700;  
     /* outline: none; */
@@ -73,13 +81,18 @@ li {
     /* margin-right: 10px; */
 }
 
+.sq-table-img-container {
+    width: fit-content;
+    margin: 20px auto;
+} 
+
 .sq-table-img {
     /* max-width: 54.9%; */
-    width: 700px;
+    width: 688px;
     /* margin-left: 22.20%; */
     /* margin-top: 20px; */
-    margin: 20px auto;
-    border: 7px solid black;
+    /* margin: 20px auto; */
+    border: 6px solid black;
     /* border-radius: 5px; */
     -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
     -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
@@ -94,9 +107,9 @@ li {
     margin: 20px auto;
     /* max-width: 600px; */
     /* max-width: 55%; */
-    width: 700px;
+    width: 688px;
     background: #ffa600;
-    border: 6px solid black;
+    border:6px solid black;
     /* border-radius: 10px; */
 
     /* https://www.cssmatic.com/box-shadow */
@@ -110,9 +123,8 @@ li {
     background: grey;
     border: none;
     margin: none;
-    height: 60px;
-    /* height: 9.40%; */
-    width: 9.53%;
+    height: 100%;
+    width: 9.52%;
     font-size: 1.7rem;
     font-weight: 600;
 }
@@ -132,13 +144,13 @@ li {
 
 .buttons-row {
     /* width: 100%; */
-    width: 700px;
+    width: 688px;
     height: 65px;
     background: #676668;
+    background: #000000;
     /* display: flex;
     justify-content: space-around; */
-    /* background: red; */
-
+    border-bottom: 6px solid black;
 }
 
 .display-level {
@@ -161,6 +173,7 @@ input {
     height: 30px;
     /* border: 3px solid #676668; */
     background: beige;
+    background: wheat;
     font-size: 2.2rem;
     padding: 13px 13px 13px 25px;
     /* border: 5px solid black; */
@@ -235,6 +248,7 @@ h2 {
     /* border: 3px solid #676668; */
     /* border-radius: 10px; */
     background-color: beige;
+    background-color: #c93d1b;
 }
 
 /* NOT WORKING COS ITS NOT EMPTY */
@@ -253,41 +267,13 @@ h2 {
     padding-bottom: 16px;
     text-align: center;
 
-    background-color: rgba(0,255,0,0.4);
+    /* background-color: rgba(0, 255, 98, 0.69); */
+    background-color: #0E7C4A;
 
     -webkit-transition: all 1.0s ease-in-out;
     transition: all 1.0s ease-in-out;
 }
 
-
-/* NNNNNNNNNNNNNNNNNNNNNNNNNNNN */
-/* TEXTCONTENT KEY VALUE PAIRS OF OBJECT
- */
-.ordered-stat-container {
-    background: #ffa600;
-    float:left;
-    border: 5px solid black;
-    /* border-radius: 10px; */
-    /* width: 55.3%; */
-    width: 700px;
-    margin-top: 20px;
-    margin-left: 22.1%;
-    min-height: 60px;
-    text-align: center;
-}
-
-/* HIDE BORDER WHEN DIV'S EMPTY */
-.ordered-stat-container:empty{ 
-    display:none;
-    /* OR */
-    /* border:none */
-}
-
-.ordered-stat-container span {
-    float: left;
-    width: 100%;
-    padding: 2px 2px;
-}
 
 /* ALTERNATING COLOR LIST ITEMSS */
 /* span:nth-child(even){
@@ -297,30 +283,31 @@ span:nth-child(odd){
   color:red;
 } */
 
-/* NNNNNNNNNNNNNNNNNNNNNNNNNNNN */
-
 .ordered-stat {
+    display: flex;
+    flex-direction: column;
     background: #ffa600;
-    float:left;
-    border: 5px solid black;
-    /* border-radius: 10px; */
-    /* width: 55.3%; */
-    width: 700px;
-    margin-top: 20px;
-    margin-left: 22.1%;
+    border: 6px solid black;
+    width: 690px;
+    margin: 20px auto;
+    /* min-height: 60px; */
     min-height: 60px;
+    height: fit-content;
     text-align: center;
+    /* https://www.cssmatic.com/box-shadow */
+    /* -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
+    -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
+    box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58); */
 }
 
 .ordered-stat:empty {
     display:none;
-    /* OR */
-    /* border:none */
 }
 
 .ordered-stat span {
-    float: left;
-    width: 100%;
+    /* border: 1px solid green; */
+    /* float: left; */
+    /* width: 100%; */
     padding: 2px 2px;
 }
 
