--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -1,35 +1,45 @@
-/*  25/8/19 2236 */
-@media only screen and (min-width : 1024px) and (max-width : 3440px) {
+@media only screen and (min-width : 100px) and (max-width : 600px) {
 
     * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
     }
-
+    
     .hidden {
         display: none;
     }
     
     body {
         font-family: 'Bungee Inline', cursive;
-        background: #6b5a3a81;
-        background: #376293dd;
-        background: wheat;
+        /* background: #6b5a3a81; */
+        /* background: #376293dd; */
+        /* background: wheat; */
     }
     
     .main {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
+        justify-content: center;
+        /* width: 100vw; */
+        height: 100vh;
+        /* border: 2px solid green; */
+        background: wheat;
     }
     
+
     .intro {
         text-align: center;
-        margin-top: 30px;
+        font-size: 18px;
+        margin: 10px 0px 10px 0px;
         
     }
     
+    .title-span {
+        display: none;
+    }
+
     .red {
         /* color: #dd1534; */
         color: #c93d1b;
@@ -45,6 +55,7 @@
     .introStats {
         /* border: 2px solid red; */
         margin: 0px;
+        font-size: 12px;
         /* float: left; */
         /* text-align: center; */
         /* margin: 5px 10%; */
@@ -54,10 +65,10 @@
     
     .fractions-container {
         /* border: 2px solid green; */
-        width: 688px;
+        /* width: 688px; */
+        width: 100vw;
         display: flex;
         justify-content: space-around;
-        margin-top: 20px;
         margin-bottom: 20px;
     }
     
@@ -66,20 +77,16 @@
     .player__toggle, .table__toggle {
         /* background: grey; */
         background: #ffa600;
-        border: 6px solid black;
+        border: 3px solid black;
         /* border-radius: 10px; */
         /* padding-right: 5px; */
-        height: 65px;
+        height: 40px;
         /* width: 55.5%; */
-        width: 700px;
-        /* width: 100vw; */
-        /* margin-left: 22.25%; */
+        /* width: 700px; */
+        width: 100%;
         font-size: 1.4rem;
         font-weight: 700;  
         /* outline: none; */
-         /* -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58); */
     }
     
     
@@ -97,46 +104,54 @@
     } 
     
     .sq-table-img {
-        /* max-width: 54.9%; */
-        width: 700px;
-        /* margin-left: 22.20%; */
-        /* margin-top: 20px; */
-        /* margin: 20px auto; */
-        border: 6px solid black;
-        /* border-radius: 5px; */
-        -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
+        width: 100%;
+        border: 3px solid black;
     }
     
+    /* FONT SIZES */
+
+    h1 {
+        font-size: 16px;
+    }
+
     .description {
-        font-size: 1.2rem;
+        font-size: 12px;
     }
     
+    .player__toggle, .table__toggle {
+        font-size: 16px;
+    }
+
+    h2.player-row {
+        font-size: 16px;
+        margin: 30px 0px 0px 0px;
+    }
+
+    .question.player-row {
+        margin: 20px 0px 5px 0px;
+    }
+
     .player-container {
-        margin: 20px auto;
+        margin: 10px auto;
         /* max-width: 600px; */
         /* max-width: 55%; */
-        width: 700px;
+        /* width: 688px; */
+        width: 100%;
+
         background: #ffa600;
-        /* background: #00ff6e; */
-        border:6px solid black;
-        /* border-radius: 10px; */
-    
-        /* https://www.cssmatic.com/box-shadow */
-        -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
+        /* background: #00a2ff; */
+        border:3px solid black;
     }
     
     .level-buttons {
         outline: none;
         background: grey;
         border: none;
-        margin: none;
-        height: 100%;
-        width: 9.52%;
-        font-size: 1.7rem;
+        margin: 0px 0px 2px 0px;
+        height: 50%;
+        /* width: 9.52%; */
+        width: 19%;
+        font-size: 16px;
         font-weight: 600;
     }
     
@@ -156,45 +171,38 @@
     .buttons-row {
         /* width: 100%; */
         /* width: 688px; */
+        width: 100%;
         height: 65px;
         background: #676668;
         background: #000000;
         /* display: flex;
-        flex-direction: row;
         justify-content: space-around; */
         border-bottom: 6px solid black;
     }
     
-    .player-row {
-        margin: 30px 0px 30px 0px;
-    }
-    
     .display-level {
-        font-size: 1.8rem;
-        /* margin: 50px 0px 50px 0px; */
+        font-size: 16px;
     }
     
-    .question {
+    h2.question {
         color: darkcyan;
-        font-size: 2rem;
+        font-size: 24px;
     }
     
     .question-span {
-        font-size: 2.2rem;
+        font-size: 28px;
         color: darkcyan;
     }
     
-    input.player-row {
-        /* margin: 0px 30%; */
-        margin: 20px auto 20px 35%;
-        /* margin-left: 35%; */
-        width: 33%;
-        height: 50px;
+    input {
+        margin: 10px 26%;
+        width: 50%;
+        height: 30px;
         /* border: 3px solid #676668; */
         background: beige;
         background: wheat;
-        font-size: 2.2rem;
-        padding: 13px 13px 13px 25px;
+        font-size: 24px;
+        padding: 13px 13px 13px 13px;
         /* border: 5px solid black; */
         /* border-radius: 10px; */
         /* outline: none; */
@@ -202,43 +210,41 @@
     
     .startPlay {
         background: grey;
-        border: 4px solid #676668;
+        /* border: 4px solid #676668; */
         /* border-radius: 10px; */
         padding-right: 5px;
         /* margin: none; */
-        height: 60px;
-        width: 90px;
-        font-size: 1.4rem;
+        height: 40px;
+        width: 60px;
+        font-size: 24px;
+        font-size: 16px;
         font-weight: 700;  
-        margin: 40px 40% 5px 25px;
+        margin: 20px 20px 20px 20px;
         /* outline: none; */
     }
     
     
     h2 {
-        height: 40px;
-        /* margin: none; */
-        /* margin: 40px 0px 40px 0px; */
-
+        /* height: 40px; */
+        margin: none;
         text-align: center;
         text-transform: uppercase;
+        font-size: 24px;
     }
     
     .logo {
         margin: 0px 20px 10% 0%;
         padding-right: 15px;
-        font-size: 2rem;
+        font-size: 24px;
     }
     
     .instruction {
-        font-size: 1.8rem;
+        font-size: 24px;
     }
     
     .message {
         text-align: center;
-        font-size: 2rem;
-        /* margin: 50px 0px 50px 0px; */
-
+        font-size: 24px;
     }
     
     /* CSS BLINKER */
@@ -255,7 +261,7 @@
     .prog-bar-text {
         text-align: right;
         font-weight: 700;
-        font-size: 1.3rem;
+        font-size: 16px;
         font-weight: 100;
         margin: none;
         margin-right: 10px;
@@ -266,13 +272,14 @@
     
     .prog-bar-container {
         width: 80%;
-        /* height: 45px; */
-        margin: 40px auto;
+        /* height: 25px; */
+        margin: 20px auto 10px auto;
         /* ??? border not hidden??? */
         /* border: 3px solid #676668; */
         /* border-radius: 10px; */
         background-color: beige;
         background-color: #c93d1b;
+        /* margin: 20px 0px 0px 0px; */
     }
     
     /* NOT WORKING COS ITS NOT EMPTY */
@@ -282,11 +289,12 @@
         /* display:none; */
         /* OR */
         border:none;
+        /* margin: 20px 0px 0px 0px; */
     }
     
     .prog-bar {
         width: 0%;
-        height: 45px;
+        height: 25px;
         padding-top: 1px;
         padding-bottom: 16px;
         text-align: center;
@@ -311,17 +319,14 @@
         display: flex;
         flex-direction: column;
         background: #ffa600;
-        border: 6px solid black;
-        width: 700px;
+        border: 3px solid black;
+        /* width: 690px; */
+        width: 100%;
         margin: 20px auto;
         /* min-height: 60px; */
-        min-height: 60px;
+        min-height: 40px;
         height: fit-content;
         text-align: center;
-        /* https://www.cssmatic.com/box-shadow */
-        /* -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
-        box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58); */
     }
     
     .ordered-stat:empty {
@@ -333,9 +338,6 @@
         /* float: left; */
         /* width: 100%; */
         padding: 2px 2px;
+        font-size: 12px;
     }
-    
 }
-
-
-
