--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -10,12 +10,12 @@
         display: none;
     }
     
-    body {
+    /* body { */
         /* font-family: 'Bungee Inline', cursive; */
         /* background: #6b5a3a81; */
         /* background: #376293dd; */
         /* background: wheat; */
-    }
+    /* } */
     
     .main {
         display: flex;
@@ -23,16 +23,18 @@
         /* align-items: center; */
         justify-content: start;
         /* width: 100vw; */
-        height: 100vh;
-        /* border: 2px solid green; */
+        height: 95vh;
+        /* border: 3px solid #ffa600; */
+        /* border: 2px solid #ff2a00; */
         background: wheat;
+        /* border-radius: .5rem; */
     }
     
 
     .intro {
         text-align: center;
         font-size: 24px;
-        margin: 10px 0px 10px 0px;
+        margin: 5px 0px 5px 0px;
         
     }
     
@@ -53,9 +55,9 @@
     /* TRY ALIGNING ONE TO THE LEFT AND THE OTHER TO THE RIGHT */
     
     .description.introStats {
-        border: 2px solid red;
+        /* border: 2px solid red; */
         margin: 0px;
-        font-size: 12px;
+        font-size: 14px;
         /* float: left; */
         /* text-align: center; */
         /* margin: 5px 10%; */
@@ -75,18 +77,6 @@
     
     /* NNNNNNNNNNNNNNNNNNNNN */
     
-    .player__toggle, .table__toggle {
-        /* background: grey; */
-        background: #ffa600;
-        border: 3px solid black;
-        /* border-radius: 10px; */
-        /* padding-right: 5px; */
-        height: 35px;
-       
-        width: 100%;
-        /* font-weight: 700;   */
-        /* outline: none; */
-    }
     
     
     
@@ -117,11 +107,24 @@
     /* CHOOSE YOUR LEVEL-CLICK PLAY-GUESS SQUARE */
     .description {
         font-size: 14px;
+
     }
     
     /* SQ TABLE/STATISTICS - PLAY */
     .player__toggle, .table__toggle {
         font-size: 16px;
+        /* background: grey; */
+        background: #ffa600;
+        /* border: 3px solid black; */
+        /* border-top: 2px solid black;
+        border-bottom: 1px solid black; */
+        /* border-radius: 10px; */
+        /* padding-right: 5px; */
+        height: 40px;
+       
+        width: 100%;
+        /* font-weight: 700;   */
+        /* outline: none; */
     }
 
     /* YOU ARE ON LEVEL ...  */
@@ -132,11 +135,12 @@
 
     /* WHAT IS ... SQUARED? */
     .question.player-row {
-        margin: 15px 0px 5px 0px;
+        margin: 10px 0px 5px 0px;
     }
 
     .player-container {
-        margin: 10px auto;
+        margin: 5px auto;
+        margin: 5% auto;
         /* max-width: 600px; */
         /* max-width: 55%; */
         /* width: 688px; */
@@ -144,18 +148,25 @@
 
         background: #ffa600;
         /* background: #00a2ff; */
-        border:3px solid black;
+        /* border:3px solid black; */
+        /* border-top: 2px solid black;
+        border-bottom: 2px solid black; */
+
+        border-top: 2px solid rgba(0, 0, 0, 0.375);
+        border-left: 2px solid rgba(0, 0, 0, 0.375);
+        border-bottom: 2px solid rgba(0, 0, 0, 0.649);
+        border-right: 2px solid rgba(0, 0, 0, 0.649);
         text-transform: uppercase;
     }
     
     .level-buttons {
         outline: none;
         background: grey;
-        border: none;
-        margin: 0px 0px 2px 0px;
-        height: 50%;
+        /* border: none; */
+        margin: 0px 0px 4px 0px;
+        height: 48%;
         /* width: 9.52%; */
-        width: 18.9%;
+        width: 18.98%;
         font-size: 24px;
         /* font-weight: 600; */
     }
@@ -179,10 +190,10 @@
         width: 100%;
         height: 140px;
         background: #676668;
-        background: #000000;
+        /* background: #cbcbcb; */
         /* display: flex;
         justify-content: space-around; */
-        border-bottom: 6px solid black;
+        /* border-bottom: 6px solid black; */
     }
     
     .display-level {
@@ -278,7 +289,7 @@
     
     
     .prog-bar-container {
-        width: 80%;
+        width: 85%;
         /* height: 25px; */
         margin: 15px auto 10px auto;
         /* ??? border not hidden??? */
@@ -326,7 +337,11 @@
         display: flex;
         flex-direction: column;
         background: #ffa600;
-        border: 3px solid black;
+        /* border: 3px solid black; */
+        border-top: 2px solid rgba(0, 0, 0, 0.375);
+        border-left: 2px solid rgba(0, 0, 0, 0.375);
+        border-bottom: 2px solid rgba(0, 0, 0, 0.649);
+        border-right: 2px solid rgba(0, 0, 0, 0.649);
         /* width: 690px; */
         width: 100%;
         /* margin: 20px auto; */
