--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -39,17 +39,10 @@
         color:  #0E7C4A;
     }
     
-    /* NNNNNNNNNNNNNNNNNNNNN */
-    /* TRY ALIGNING ONE TO THE LEFT AND THE OTHER TO THE RIGHT */
     
     .introStats {
         /* border: 2px solid red; */
         margin: 0px;
-        /* float: left; */
-        /* text-align: center; */
-        /* margin: 5px 10%; */
-        /* margin-top: 5px; */
-        /* margin-left: 10%; */
     }
     
     .fractions-container {
@@ -61,19 +54,13 @@
         margin-bottom: 20px;
     }
     
-    /* NNNNNNNNNNNNNNNNNNNNN */
     
     .player__toggle, .table__toggle {
-        /* background: grey; */
+        font-family: 'Bungee Inline', cursive;
         background: #ffa600;
         border: 6px solid black;
-        /* border-radius: 10px; */
-        /* padding-right: 5px; */
         height: 65px;
-        /* width: 55.5%; */
         width: 700px;
-        /* width: 100vw; */
-        /* margin-left: 22.25%; */
         font-size: 1.4rem;
         font-weight: 700;  
         /* outline: none; */
@@ -97,13 +84,8 @@
     } 
     
     .sq-table-img {
-        /* max-width: 54.9%; */
         width: 700px;
-        /* margin-left: 22.20%; */
-        /* margin-top: 20px; */
-        /* margin: 20px auto; */
         border: 6px solid black;
-        /* border-radius: 5px; */
         -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
         -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
         box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
@@ -115,8 +97,6 @@
     
     .player-container {
         margin: 20px auto;
-        /* max-width: 600px; */
-        /* max-width: 55%; */
         width: 700px;
         background: #ffa600;
         /* background: #00ff6e; */
@@ -154,8 +134,6 @@
     
     
     .buttons-row {
-        /* width: 100%; */
-        /* width: 688px; */
         height: 65px;
         background: #676668;
         background: #000000;
@@ -185,27 +163,23 @@
     }
     
     input.player-row {
-        /* margin: 0px 30%; */
         margin: 20px auto 20px 35%;
-        /* margin-left: 35%; */
         width: 33%;
         height: 50px;
-        /* border: 3px solid #676668; */
+        border: 6px solid #676668;
         background: beige;
         background: wheat;
         font-size: 2.2rem;
         padding: 13px 13px 13px 25px;
-        /* border: 5px solid black; */
-        /* border-radius: 10px; */
+        /* border: 6px solid black; */
         /* outline: none; */
     }
     
     .startPlay {
+        font-family: 'Bungee Inline', cursive;
         background: grey;
         border: 4px solid #676668;
-        /* border-radius: 10px; */
         padding-right: 5px;
-        /* margin: none; */
         height: 60px;
         width: 90px;
         font-size: 1.4rem;
@@ -217,9 +191,7 @@
     
     h2 {
         height: 40px;
-        /* margin: none; */
         /* margin: 40px 0px 40px 0px; */
-
         text-align: center;
         text-transform: uppercase;
     }
@@ -238,10 +210,9 @@
         text-align: center;
         font-size: 2rem;
         /* margin: 50px 0px 50px 0px; */
-
     }
     
-    /* CSS BLINKER */
+    /* WRONG ANSWER MESSAGE CSS BLINKER */
     .blink {
         /* animation: blinker 1.1s linear infinite; */
         animation: blinker 1.1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
@@ -259,7 +230,6 @@
         font-weight: 100;
         margin: none;
         margin-right: 10px;
-        /* color: darkcyan; */
         color: black;
     }
     
@@ -268,9 +238,6 @@
         width: 80%;
         /* height: 45px; */
         margin: 40px auto;
-        /* ??? border not hidden??? */
-        /* border: 3px solid #676668; */
-        /* border-radius: 10px; */
         background-color: beige;
         background-color: #c93d1b;
     }
@@ -290,10 +257,8 @@
         padding-top: 1px;
         padding-bottom: 16px;
         text-align: center;
-    
         /* background-color: rgba(0, 255, 98, 0.69); */
         background-color: #0E7C4A;
-    
         -webkit-transition: all 1.0s ease-in-out;
         transition: all 1.0s ease-in-out;
     }
@@ -307,6 +272,8 @@
       color:red;
     } */
     
+
+    /* STAT DIVS */
     .ordered-stat {
         display: flex;
         flex-direction: column;
@@ -328,11 +295,16 @@
         display:none;
     }
     
+    /* DIV SPANS */
     .ordered-stat span {
-        /* border: 1px solid green; */
-        /* float: left; */
-        /* width: 100%; */
-        padding: 2px 2px;
+        padding: 20px 2px;
+    }
+
+    /* SECOND STAT DIV */
+    .ordered-stat.second-ordered-stat-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
     }
     
 }
