--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -10,13 +10,6 @@
         display: none;
     }
     
-    /* body { */
-        /* font-family: 'Bungee Inline', cursive; */
-        /* background: #6b5a3a81; */
-        /* background: #376293dd; */
-        /* background: wheat; */
-    /* } */
-    
     .main {
         display: flex;
         flex-direction: column;
@@ -24,18 +17,14 @@
         justify-content: start;
         /* width: 100vw; */
         height: 95vh;
-        /* border: 3px solid #ffa600; */
-        /* border: 2px solid #ff2a00; */
         background: wheat;
         /* border-radius: .5rem; */
     }
     
-
     .intro {
         text-align: center;
         font-size: 24px;
         margin: 5px 0px 5px 0px;
-        
     }
     
     .title-span {
@@ -51,40 +40,19 @@
         color:  #0E7C4A;
     }
     
-    /* NNNNNNNNNNNNNNNNNNNNN */
-    /* TRY ALIGNING ONE TO THE LEFT AND THE OTHER TO THE RIGHT */
-    
     .description.introStats {
         /* border: 2px solid red; */
         margin: 0px;
         font-size: 14px;
         /* float: left; */
-        /* text-align: center; */
-        /* margin: 5px 10%; */
-        /* margin-top: 5px; */
-        /* margin-left: 10%; */
     }
     
     .fractions-container {
-        /* border: 2px solid green; */
-        /* width: 688px; */
         width: 100vw;
         display: flex;
         justify-content: space-around;
         /* margin-bottom: 20px; */
         margin-bottom: 5%;
-    }
-    
-    /* NNNNNNNNNNNNNNNNNNNNN */
-    
-    
-    
-    
-    li {
-        /* The list items will not be marked */
-        list-style-type: none;
-        /* float: left; */
-        /* margin-right: 10px; */
     }
     
     .sq-table-img-container {
@@ -184,12 +152,11 @@
     
     
     .buttons-row {
-        /* width: 100%; */
-        /* width: 688px; */
         width: 100%;
         height: 140px;
         background: #676668;
         /* background: #cbcbcb; */
+        /* FLEX WILL MESS UP BUTTON ANIMATION  */
         /* display: flex;
         justify-content: space-around; */
         /* border-bottom: 6px solid black; */
@@ -219,17 +186,11 @@
         background: wheat;
         font-size: 20px;
         padding: 13px 13px 13px 13px;
-        /* border: 5px solid black; */
-        /* border-radius: 10px; */
         /* outline: none; */
     }
     
     .startPlay {
         background: grey;
-        /* border: 4px solid #676668; */
-        /* border-radius: 10px; */
-        /* padding-right: 5px; */
-        /* margin: none; */
         height: 40px;
         width: 60px;
         font-size: 24px;
@@ -273,7 +234,6 @@
     @keyframes blinker {  
         50% { opacity: 0.0; }
     }
-    
     
     .prog-bar-text {
         text-align: right;
@@ -378,7 +338,5 @@
     
    .ordered-stat.second-ordered-stat-container span {
         margin: 8px 0px 0px 0px;
-
     }
-    
 }
