--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -22,11 +22,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        /* justify-content: center; */
     }
     
     .intro {
         text-align: center;
-        margin-top: 30px;
+        margin-top: 20px;
         
     }
     
@@ -50,8 +51,8 @@
         width: 688px;
         display: flex;
         justify-content: space-around;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
     
     .player__toggle, .table__toggle {
