simplify xsmall css

--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -192,6 +192,9 @@
         outline: none;
     }
     
+    .display-level-play-button {
+        display: none;
+    }
     
     h2 {
         height: 40px;
