--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -90,10 +90,15 @@
     
     .sq-table-img-container {
         width: fit-content;
+        height: 530px;
         margin: 20px auto;
+        /* border: 3px solid green; */
     } 
     
     .sq-table-img {
+        z-index: -1;
+        position: relative;
+        top: -65px;
         width: 700px;
         border: 5px solid black;
         -webkit-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
@@ -101,6 +106,23 @@
         box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
     }
     
+    /* THIS IS A FAKE DIV TO MASK DIFFERENT FONTS IN PICTURE TEMPORARILY !!! */
+    .table-img-header {
+        /* z-index: 1; */
+        position: relative;
+        /* top: 65px; */
+        width: 100%;
+        height: 65px;
+        background: #ffa600;
+        border: 5px solid black;
+    }
+
+    .table-img-header h2 {
+        font-size: 20px;
+        font-weight: 400;
+        margin-top: 17px;
+    }
+
     .description {
         font-size: 20px;
     }
@@ -201,10 +223,11 @@
         text-transform: uppercase;
         background: grey;
         border: 4px solid #000000;
-        padding-right: 5px;
-        padding-left: 5px;
+        /* padding-right: 5px;
+        padding-left: 5px; */
         height: 65px;
-        width: 90px;
+        width: 100px;
+        text-align: center;
         font-size: 20px;
         /* font-weight: 700;   */
         margin: 0px 0px 0px 10%;
