--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -69,6 +69,26 @@
         /* border: 3px solid black; */
     }
     
+    /* THIS IS A FAKE DIV TO MASK DIFFERENT FONTS IN PICTURE TEMPORARILY !!! */
+    /* HIDDEN IN XSMALL SIZE */
+    .table-img-header {
+        /* z-index: 1; */
+        /* position: relative;
+        width: 100%;
+        height: 65px;
+        background: #ffa600;
+        border: 5px solid black; */
+
+        display: none;
+}
+
+.table-img-header h2 {
+    /* font-size: 20px;
+    font-weight: 400;
+    margin-top: 17px; */
+    display: none;
+}
+
     /* FONT SIZES */
 
     h1 {
@@ -182,16 +202,27 @@
         height: 45px;
         width: 70px;
         font-size: 16px;
+        /* text-align: center; */
+
         /* font-weight: 700;   */
         margin: 10px 0px 8px 8%;
         /* outline: none; */
     }
     
+    /* =================================================== */
+
+    /* FIX THIS USE SPAN FOR LEVEL AND RANGE TOO !!! */
+    .startPlay.play-button {
+        /* display: flex; */
+        /* flex-direction: column; */
+        width: 86px;
+    }
+
     .display-level-play-button {
         margin-left: 5px;
         /* font-size: 14px; */
     }
-
+    /* =================================================== */
     
     .logo {
         margin: 0px 5% 0px 0px;
