--- a/assets/css/snt1.css
+++ b/assets/css/snt1.css
@@ -69,7 +69,7 @@
         /* font-family: 'Bungee Inline', cursive; */
         font-family: 'Orbitron', sans-serif;
         text-transform: uppercase;
-        background: #ffa600;
+        background: #ffa600c5;
         border: 5px solid black;
         height: 65px;
         width: 700px;
@@ -80,7 +80,19 @@
         -moz-box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58);
         box-shadow: 0px 0px 45px 10px rgba(0,0,0,0.58); */
     }
+
+    .player__toggle:hover {
+        background: #ffa600;
+        border: 4px solid black;
+        cursor: pointer;
+    }
     
+    .table__toggle:hover {
+        background: #ffa600;
+        border: 4px solid black;
+        cursor: pointer;
+    }
+
     li {
         /* The list items will not be marked */
         list-style-type: none;
@@ -132,6 +144,7 @@
         width: 700px;
         min-height: 250px;
         background: #ffa600;
+        background: #ffa600c5;
         /* background: #00ff6e; */
         border:5px solid black;
         /* border-radius: 10px; */
@@ -144,6 +157,11 @@
         /* -webkit-box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #A1D8FF, 20px 20px 0px 0px #CAE6FF, 25px 25px 0px 0px #E1EEFF, 5px 5px 15px 5px rgba(0,0,0,0); 
         box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #A1D8FF, 20px 20px 0px 0px #CAE6FF, 25px 25px 0px 0px #E1EEFF, 5px 5px 15px 5px rgba(0,0,0,0); */
     }
+
+    .player-container:hover {
+        background: #ffa600;
+    }
+
     
     .level-buttons {
         outline: none;
@@ -158,10 +176,11 @@
     }
     
     .level-buttons:hover {
-        color: darkslategrey;
+        color: rgb(0, 0, 0);
         /* #1897b4 */
         background: orange;
-        font-weight: 800;
+        font-weight: 600;
+        cursor: pointer;
     }
     
     .selected {
@@ -232,6 +251,12 @@
         /* font-weight: 700;   */
         margin: 0px 0px 0px 10%;
         outline: none;
+    }
+
+    .startPlay:hover {
+        background: #ffa600;
+        cursor: pointer;
+        border: 3px solid black;
     }
     
     .display-level-play-button {
@@ -377,6 +402,10 @@
         display:none;
     }
     
+    .ordered-stat p {
+        font-size: 20px;
+    }
+
     .ordered-stat.ordered-stat.first-ordered-stat-container {
         margin-bottom: 20px;
     }
