--- a/assets/css/xsmall.css
+++ b/assets/css/xsmall.css
@@ -65,7 +65,7 @@
         /* height: 250px; */
         height: fit-content;
         margin: 20px 0px 0px 0px; 
-        border: 3px solid green;
+        /* border: 3px solid green; */
     } 
     
     .sq-table-img {
